# terminal-extensions

./: .pre-commit-config.yaml  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
terminal_extensions/: cli.py  type_alias.py
tests/: test_hooks.py
